--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>change html elements</title>
 </head>
 <body>
     
@@ -23,6 +23,6 @@
         </ol>       
     </div>
 
-    <script src="./program27.js"></script>
+    <script src="p2/program28.js"></script>
 </body>
 </html>
